arreglo de queries, avance menu desplegable. Sigue habiendo problemas con el boton hamburguesa de la nav

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
 
         <!--Inicia nav-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav-body">
 
             <div class="container-fluid" id="cont-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -153,14 +153,14 @@
         <section class="contenedor-info">
             <article class="flex">
                 <div class="grid-1 grid-template-columns-rows-1">
-                    <div class="img-cuotas">
-                        <img class="cuotas" src="img/cuotas-png.png" alt="icono de recibo de tarjeta">
+                    <div class="img-contenedor">
+                        <img src="img/cuotas-png.png" alt="icono de recibo de tarjeta" id="cuotas">
                     </div>
-                    <div class="img-envio">
-                        <img src="img/envio-png.png" alt="#" class="icono de envios">
+                    <div class="img-contenedor">
+                        <img src="img/envio-png.png" alt="icono envio gratis" id="envio">
                     </div>
-                    <div class="img-metodos">
-                        <img src="img/metodos-png.png" alt="#" class="icono de tarjetas">
+                    <div class="img-contenedor">
+                        <img src="img/metodos-png.png" alt="icono tarjetas de credito" id="metodos" >
                     </div>
                 </div>
 
@@ -423,7 +423,7 @@
 
         <!--Footer-->
         <section class="caja-footer">
-            <article class="box-footer">
+            <article class="box-footer" id="info-footer">
                 <div class="nosotros">
                     <h1 id="nosotros">Beauty care - Skincare y maquillaje</h1>
                     <hr>
