--- a/paginas/cuidado-facial.html
+++ b/paginas/cuidado-facial.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Maquillaje y productos de cuidado importado y nacional, conseguilo todo en tu tienda online de confianza.  "/>
     <meta name="robots" content= "index, follow">
     <meta name="keywords" content="Maquillaje, Cuidado, Belleza"/>
-    <title>Beauty store</title>
+    <title>Cuidado facial</title>
     <link rel="shortcut icon" href="../img/logo-beso.png" type="image/x-icon">
     <!--Link a mi CSS-->
     <link rel="stylesheet" href="../css/main.css">
@@ -45,15 +45,15 @@
                     <div class="contenedor-icon">
 
                         <div class="cont-icon">
-                            <img class="img-logos" src="img/logo-corazon.png" alt="icono de corazon">
+                            <img class="img-logos" src="../img/logo-corazon.png" alt="icono de corazon">
                         </div>
 
                         <div class="cont-icon">
-                            <img class="img-logos" src="img/logo-carrito.png" alt="icono de carro de compras">
+                            <img class="img-logos" src="../img/logo-carrito.png" alt="icono de carro de compras">
                         </div>
 
                         <div class="cont-icon">
-                            <img class="img-logos" src="img/logo-user (1).png" alt="icono de usuario">
+                            <img class="img-logos" src="../img/logo-user (1).png" alt="icono de usuario">
                         </div>
 
                     </div>
