--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="header">
             <div class="cont-header">
                 <div class="logo-img">
-                   <a href="index.html"> <img src="img/logo-beso.png" alt="logo de la pagina, beso y nombre." id="brand"></a>
+                    <img src="img/logo-beso.png" alt="logo de la pagina, beso y nombre." id="brand">
                 </div>
 
                 <div id="search-bar">
@@ -46,21 +46,15 @@
                     <div class="contenedor-icon">
 
                         <div class="cont-icon">
-                            <a href="paginas/error.html" target="_blank">
                             <img class="img-logos" src="img/logo-corazon.png" alt="icono de corazon">
-                        </a>
                         </div>
 
                         <div class="cont-icon">
-                            <a href="paginas/error.html" target="_blank">
                             <img class="img-logos" src="img/logo-carrito.png" alt="icono de carro de compras">
-                        </a>
                         </div>
 
                         <div class="cont-icon">
-                            <a href="paginas/error.html" target="_blank">
                             <img class="img-logos" src="img/logo-user (1).png" alt="icono de usuario">
-                        </a>
                         </div>
 
                     </div>
@@ -82,29 +76,29 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a href="paginas/maquillaje.html" target="_blank"> Maquillaje <a class="nav-link dropdown-toggle"
-                                href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/cuidado-facial.html"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
-
+                            <a class="nav-link dropdown-toggle"
+                                href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/maquillaje.html"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Maquillaje
+                            </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item"
-                                        href="paginas/labios.html" target="_blank">Labios</a>
+                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/labios.html">Labios</a>
                                 </li>
                                 <li><a class="dropdown-item"
-                                        href="paginas/ojos.html" target="_blank">Ojos</a>
+                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/ojos.html">Ojos</a>
                                 </li>
                                 <li><a class="dropdown-item"
-                                        href="paginas/rostro.html" target="_blank">Rostro</a>
+                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/rostro.html">Rostro</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a href="paginas/cuidado-facial.html" target="_blank"> Cuidado facial <a class="nav-link dropdown-toggle"
+                            <a class="nav-link dropdown-toggle"
                                 href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/cuidado-facial.html"
                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
-
-                            </a></a>
-                            
+                                Cuidado facial
+                            </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Limpieza</a></li>
                                 <li><a class="dropdown-item" href="#">Hidratacion</a></li>
@@ -112,13 +106,13 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="paginas/error.html" target="_blank">Marcas</a>
+                            <a class="nav-link" href="#">Marcas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="paginas/error.html" target="_blank">Novedades</a>
+                            <a class="nav-link" href="#">Novedades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="paginas/error.html" target="_blank">Contacto</a>
+                            <a class="nav-link" href="#">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -445,10 +439,10 @@
                     <h1 id="links">Links</h1>
                     <hr>
                     <ul>
-                        <li><a href="paginas/error.html" target="_blank">Nosotros</a></li>
-                        <li><a href="paginas/error.html" target="_blank">Como comprar</a></li>
-                        <li><a href="paginas/error.html" target="_blank">Terminos y condiciones</a></li>
-                        <li><a href="paginas/error.html" target="_blank">Cancelar compra</a></li>
+                        <li>Nosotros</li>
+                        <li>Como comprar</li>
+                        <li>Terminos y condiciones</li>
+                        <li>Cancelar compra</li>
                     </ul>
                 </div>
 
@@ -456,9 +450,9 @@
                     <h1 id="contacto">Contacto</h1>
                     <hr>
                     <ul>
-                        <li><a href="paginas/error.html" target="_blank"> Whatsapp </a></li>
-                        <li><a href="paginas/error.html" target="_blank">Mail</a></li>
-                        <li><a href="paginas/error.html" target="_blank">Ubicacion</a></li>
+                        <li>Wpp</li>
+                        <li>mail</li>
+                        <li>ubicacion</li>
                     </ul>
                 </div>
             </article>
