cambio de paginas ´maquillaje´ y ´cuidado facial´ por limpieza y serum

--- a/paginas/error.html
+++ b/paginas/error.html
@@ -81,7 +81,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item"
-                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/labios.html">Labios</a>
+                                        href="/paginas/labios.html">Labios</a>
                                 </li>
                                 <li><a class="dropdown-item"
                                         href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/ojos.html">Ojos</a>
@@ -99,8 +99,8 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Limpieza</a></li>
-                                <li><a class="dropdown-item" href="#">Hidratacion</a></li>
-                                <li><a class="dropdown-item" href="#">Anti-age</a></li>
+                                <li><a class="dropdown-item" href="#">Serum</a></li>
+                                <li><a class="dropdown-item" href="#">Brumas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
