--- a/paginas/limpieza.html
+++ b/paginas/limpieza.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Maquillaje y productos de cuidado importado y nacional, conseguilo todo en tu tienda online de confianza.  "/>
     <meta name="robots" content= "index, follow">
     <meta name="keywords" content="Maquillaje, Cuidado, Belleza"/>
-    <title>Cuidado facial</title>
+    <title>Limpieza</title>
     <link rel="shortcut icon" href="../img/logo-beso.png" type="image/x-icon">
     <!--Link a mi CSS-->
     <link rel="stylesheet" href="../css/main.css">
@@ -122,13 +122,21 @@
         <!--Header contenido de pagina-->
         <section class="div-header">
             <article>
-                <div class="cortes">CUIDADO FACIAL</div>
+                <div class="cortes">LIMPIEZA</div>
                 <div class="lineas"></div>
             </article>
         </section>
     </header>
 
     <main>
+
+        <!--ruta exploracion-->
+        <div class="ruta-exploracion">
+            <h1><a href="/index.html">Inicio</a> </h1>
+            <h2>></h2>
+            <h1>Limpieza</h1>
+        </div>
+
         <div class="flex-row">
         <!--Side menu vertical-->
         <article class="menu-vertical">
@@ -144,10 +152,8 @@
                     <li class="categoria"><a href="#">CATEGORIA</a>
                         <ul class="submenu">
                             <li><a href="#">Limpieza</a></li>
-                            <li><a href="#">Hidratacion</a></li>
-                            <li><a href="#">Anti-age</a></li>
                             <li><a href="#">Serum</a></li>
-                            <li><a href="#">Protectores</a></li>
+                            <li><a href="#">Brumas</a></li>
                         </ul>
                     </li>
                     <li class="categoria"><a href="#">MARCA</a></li>
@@ -173,20 +179,20 @@
                             <div class="image-content-producto">
 
                                 <div class="card-image-producto">
-                                    <img id="serum-ordinary" src="../img/pag-maqullaje/serum-ordinary.png"
-                                        alt="Serum exfoliante The Ordinary">
+                                    <img id="lancome" src="../img/limpieza/lancome.png"
+                                        alt="Espuma Limpiadora Lancôme Mousse">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">THE ORDINARY</h2>
-                                <h3 class="nombre-producto-producto">AHA 30% + BHA 2% PEELING SOLUTION</h3>
+                                <h2 class="nombre-marca-producto">LANCOME</h2>
+                                <h3 class="nombre-producto-producto">MOUSSE LIMPIADORA ECLAT</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$1.874</h2>
+                                    <h2 class="precio-producto">$21.490</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -203,19 +209,19 @@
                             <div class="image-content-producto">
 
                                 <div class="card-image-producto">
-                                    <img id="aceite-ordinary" src="../img/pag-maqullaje/aceite-ordinary.png"
-                                        alt="Aceite The Ordinary">
+                                    <img id="loreal-limpador" src="../img/limpieza/loreal.png"
+                                        alt="Gel de limpieza loreal">
                                 </div>
 
                                 <div class="card-content-producto">
-                                    <h2 class="nombre-marca-producto">THE ORDINARY</h2>
-                                    <h3 class="nombre-producto-producto">ORGANIC VIRGIN CHIA SEED OIL</h3>
+                                    <h2 class="nombre-marca-producto">L'OREAL PÄRIS</h2>
+                                    <h3 class="nombre-producto-producto">Gel de Limpieza Hidratante Revitalift Ácido Hialurónico</h3>
                                 </div>
                                 <hr class="separador">
 
                                 <article class="texto-descripcion">
                                     <div class="precio-producto-producto">
-                                        <h2 class="precio-producto">$1.874</h2>
+                                        <h2 class="precio-producto">$2.207</h2>
                                         <h3 class="cantidad-cuotas"></h3>
                                     </div>
 
@@ -232,20 +238,20 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="hidratante-ordinary" src="../img/pag-maqullaje/hidratante-ordinary.png"
-                                        alt="Hidratante The Ordinary">
+                                    <img id="gel-avena" src="../img/limpieza/biobellus.png"
+                                        alt="Gel Limpieza Facial Avena">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">THE ORDINARY</h2>
-                                <h3 class="nombre-producto-producto">NATURAL MOISTURIZING FACTORS + HA</h3>
+                                <h2 class="nombre-marca-producto">BIOBELLUS</h2>
+                                <h3 class="nombre-producto-producto">GEL LIMPIEZA FACIAL AVENA CALENDULA</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$1.874</h2>
+                                    <h2 class="precio-producto">$2.240</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -263,20 +269,20 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="limpiador-khiels" src="../img/pag-maqullaje/limpiador-khiels.png"
-                                        alt="Limpiador facial Khiels">
+                                    <img id="cerave" src="../img/limpieza/cerave.png"
+                                        alt="Limpiador hidratante Cerave">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">KHIELS</h2>
-                                <h3 class="nombre-producto-producto">CUCUMBER HERBAL CONDITIONING <br> CLEANSER</h3>
+                                <h2 class="nombre-marca-producto">CERABE</h2>
+                                <h3 class="nombre-producto-producto">HYDRATING CLEANSER NORMAL TO DRY SKIN</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$1.874</h2>
+                                    <h2 class="precio-producto">$2.658</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -292,20 +298,20 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="eye-khiels" src="../img/pag-maqullaje/contorno-ojos-khiels.png"
+                                    <img id="cetaphil" src="../img/limpieza/cetaphil.png"
                                         alt="crema contorno de ojos khiels">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">KHIELS</h2>
-                                <h3 class="nombre-producto-producto">CREAMY EYE TREATMENT WITH AVOCADO</h3>
+                                <h2 class="nombre-marca-producto">CETHAPIL</h2>
+                                <h3 class="nombre-producto-producto">LOCION LIMPIADORA PARA PIEL SENSIBLE</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$1.874</h2>
+                                    <h2 class="precio-producto">$5.509</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -322,20 +328,20 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="garnier-agua" src="../img/pag-maqullaje/agua-micelar-garnier.png"
-                                        alt="agua micelar garnier">
+                                    <img id="neutrogena" src="../img/limpieza/neutrogena.png"
+                                        alt="Gel de Limpieza Neutrogena">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">GARNIER</h2>
-                                <h3 class="nombre-producto-producto">AGUA MICELAR BIFASICA</h3>
+                                <h2 class="nombre-marca-producto">NEUTROGENA</h2>
+                                <h3 class="nombre-producto-producto">GEL DE LIMPIEZA PURIFIED SKIN</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$1.874</h2>
+                                    <h2 class="precio-producto">$1.706</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -354,20 +360,20 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="acf-protector" src="../img/pag-maqullaje/protector-acf.png"
-                                        alt="protector solar en barra acf">
+                                    <img id="acf-limpiador" src="../img/limpieza/acf.png"
+                                        alt="Aceite Limpiador Facial Doble Limpieza">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
                                 <h2 class="nombre-marca-producto">ACF</h2>
-                                <h3 class="nombre-producto-producto">PROTECTOR UV BARRA</h3>
+                                <h3 class="nombre-producto-producto">ACEITE LIMPIADOR FACIAL DOBLE LIMPIEZA</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$1.874</h2>
+                                    <h2 class="precio-producto">$4.490</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -382,19 +388,19 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="serum-ordinary-2" src="../img/slider-3.jpg" alt="serum hidratante The Ordinary">
+                                    <img id="vichy" src="../img/limpieza/vichy.png" alt="Gel limpieza purificador Vichy">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">ACF</h2>
-                                <h3 class="nombre-producto-producto">VOL.1 : BALANCE</h3>
+                                <h2 class="nombre-marca-producto">VICHY</h2>
+                                <h3 class="nombre-producto-producto">NORMADERM PHYTO GEL LIMPIEZA PURIFICADOR</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$1.874</h2>
+                                    <h2 class="precio-producto">$12.112</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
@@ -410,20 +416,20 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="corrector-eucerin" src="../img/pag-maqullaje/corrector-eucerin.jpg"
-                                        alt="Hidratante The Ordinary">
+                                    <img id="roche" src="../img/limpieza/roche.png"
+                                        alt="Effaclar Agua Micelar La Roche-Posay">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">EUCERIN</h2>
-                                <h3 class="nombre-producto-producto">ANTI-PIGMENT SPOT CORRECTOR</h3>
+                                <h2 class="nombre-marca-producto">LA ROCHE-POSAY</h2>
+                                <h3 class="nombre-producto-producto">EFFACLAR AGUA MICELAR LA ROCHE-POSAY</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$1.874</h2>
+                                    <h2 class="precio-producto">$8.068</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
