--- a/paginas/serum.html
+++ b/paginas/serum.html
@@ -96,8 +96,8 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Limpieza</a></li>
-                                <li><a class="dropdown-item" href="#">Hidratacion</a></li>
-                                <li><a class="dropdown-item" href="#">Anti-age</a></li>
+                                <li><a class="dropdown-item" href="#">Serum</a></li>
+                                <li><a class="dropdown-item" href="#">Brumas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -119,7 +119,7 @@
         <!--Header contenido de pagina-->
         <section class="div-header">
             <article>
-                <div class="cortes">MAQUILLAJE</div>
+                <div class="cortes">SERUM</div>
                 <div class="lineas"></div>
             </article>
         </section>
@@ -171,21 +171,21 @@
                             <div class="image-content-producto">
 
                                 <div class="card-image-producto">
-                                    <img id="mac-iluminador" src="../img/pag-maqullaje/mac-iluminador.png"
-                                        alt="rubor liquido MAC">
+                                    <img id="eucerin-s" src="../img/Serum/eucerin.png"
+                                        alt="Sérum Antiedad Eucerin">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">MAC</h2>
-                                <h3 class="nombre-producto-producto">EXTRA DIMENSION SKINFINISH</h3>
+                                <h2 class="nombre-marca-producto">EUCERIN</h2>
+                                <h3 class="nombre-producto-producto">SERUM ANTIEDAD 3D HYALURON-FILLER + ELASTICITY</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$8.500</h2>
-                                    <h3 class="cantidad-cuotas">3 cuotas de $2.833</h3>
+                                    <h2 class="precio-producto">$20.229</h2>
+                                    <h3 class="cantidad-cuotas">6 cuotas de $3.371</h3>
                                 </div>
 
                             </article>
@@ -200,20 +200,19 @@
                             <div class="image-content-producto">
 
                                 <div class="card-image-producto">
-                                    <img id="mac-mascara" src="../img/pag-maqullaje/mac-mascara.png"
-                                        alt="mascara de pestañas MAC">
+                                    <img id="serum-bio" src="../img/Serum/serum-bio.png"
+                                        alt="SUERO FACIAL NANO HIALURONICO">
                                 </div>
 
                                 <div class="card-content-producto">
-                                    <h2 class="nombre-marca-producto">MAC</h2>
-                                    <h3 class="nombre-producto-producto">M·A·CSTACK MASCARA</h3>
+                                    <h2 class="nombre-marca-producto">BIOBELLUS</h2>
+                                    <h3 class="nombre-producto-producto">SUERO FACIAL NANO HIALURONICO</h3>
                                 </div>
                                 <hr class="separador">
 
                                 <article class="texto-descripcion">
                                     <div class="precio-producto-producto">
-                                        <h2 class="precio-producto">$5.800</h2>
-                                        <h3 class="cantidad-cuotas">3 cuotas de $1.933</h3>
+                                        <h2 class="precio-producto">$2.800</h2>
                                     </div>
 
                                 </article>
@@ -228,20 +227,19 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="mac-labial" src="../img/pag-maqullaje/mac-labial.png" alt="labial MAC">
+                                    <img id="veganis" src="../img/Serum/veganis.png" alt="Serum Facial Luminosidad">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">MAC</h2>
-                                <h3 class="nombre-producto-producto">RETRO MATTE LIPSTICK</h3>
+                                <h2 class="nombre-marca-producto">VEGANIS</h2>
+                                <h3 class="nombre-producto-producto">SERUM FACIAL LUMINOSIDAD PROFUNDA</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$4.563</h2>
-                                    <h3 class="cantidad-cuotas">3 cuotas de $1.521</h3>
+                                    <h2 class="precio-producto">$2.910</h2>
                                 </div>
 
                             </article>
@@ -257,21 +255,20 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="mac-mascara-2" src="../img/pag-maqullaje/mac-mascara-2.png"
-                                        alt="mascara de pestaña MAC">
+                                    <img id="cetaphil-s" src="../img/Serum/cetaphil-s.png"
+                                        alt="Serum Facial">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">MAC</h2>
-                                <h3 class="nombre-producto-producto">MAGIC EXTENSION 5MM <br> FIBRE MASCARA</h3>
+                                <h2 class="nombre-marca-producto">CETAPHIL</h2>
+                                <h3 class="nombre-producto-producto">SERUM FACIAL OPTIMAL HYDRATION</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$5.600</h2>
-                                    <h3 class="cantidad-cuotas">3 cuotas de $1.866</h3>
+                                    <h2 class="precio-producto">$6.433</h2>
                                 </div>
 
                             </article>
@@ -285,21 +282,20 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="mac-labial-2" src="../img/pag-maqullaje/mac-labial-2.png"
-                                        alt="Labial en barra MAC">
+                                    <img id="kalo" src="../img/Serum/kalo.png"
+                                        alt="SERUM FACIAL HIDRATANT">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">MAC</h2>
-                                <h3 class="nombre-producto-producto">LOVE ME LIPSTICK</h3>
+                                <h2 class="nombre-marca-producto">KALO</h2>
+                                <h3 class="nombre-producto-producto">STAY YOUNG SERUM HIDRATANTE</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$3.630</h2>
-                                    <h3 class="cantidad-cuotas">3 cuotas de $1.210</h3>
+                                    <h2 class="precio-producto">$5.788</h2>
                                 </div>
 
                             </article>
@@ -314,21 +310,20 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="mac-corrector" src="../img/pag-maqullaje/mac-corrector.png"
-                                        alt="Corrector liquido MAC">
+                                    <img id="neutrogena-s" src="../img/Serum/neutrogena-s.png"
+                                        alt="Sérum Hidratante Facial">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">MAC</h2>
-                                <h3 class="nombre-producto-producto">PRO LONGWEAR CONCEALER</h3>
+                                <h2 class="nombre-marca-producto">NEUTROGENA</h2>
+                                <h3 class="nombre-producto-producto">SERUM HIDRATANTE CONCENTRADO HYDRO BOOST</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$6.500</h2>
-                                    <h3 class="cantidad-cuotas">3 cuotas de $2.166</h3>
+                                    <h2 class="precio-producto">$5.029</h2>
                                 </div>
 
                             </article>
@@ -345,21 +340,47 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="mac-polvo" src="../img/pag-maqullaje/mac-polvo.png"
-                                        alt="Polvo compacto MAC">
+                                    <img id="loreal-s" src="../img/Serum/loreal-s.png"
+                                        alt="Sérum Rellenador L'Oreal París">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">MAC</h2>
-                                <h3 class="nombre-producto-producto">STUDIO FIX POWDER <br> PLUS FOUNDATION</h3>
+                                <h2 class="nombre-marca-producto">L'OREAL PARIS</h2>
+                                <h3 class="nombre-producto-producto">SERUM RELLENADOR REVITALIFT ACIDO HIALURONICO</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$8.296</h2>
-                                    <h3 class="cantidad-cuotas">3 cuotas de $2.765</h3>
+                                    <h2 class="precio-producto">$5.923</h2>
+                                    </div>
+
+                            </article>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
+                                    <img id="garnier-s" src="../img/Serum/garnier-s.png"
+                                        alt="Sérum Facial Iluminador Vitamina C">
+                                </div>
+                            </div>
+
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">GARNIER</h2>
+                                <h3 class="nombre-producto-producto">SERUM ILUMINADOR VITAMINA C</h3>
+                            </div>
+                            <hr class="separador">
+
+                            <article class="texto-descripcion">
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$3.053</h2>
                                 </div>
 
                             </article>
@@ -373,48 +394,20 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="mac-rubor" src="../img/pag-maqullaje/mac-rubor.png"
-                                        alt="Rubor en polvo MAC">
+                                    <img id="ruby" src="../img/Serum/ruby.png"
+                                        alt="Suero Facial Antioxidante Con Colágeno">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">MAC</h2>
-                                <h3 class="nombre-producto-producto">MINERALIZE BLUSH</h3>
+                                <h2 class="nombre-marca-producto">RUBY SKIN</h2>
+                                <h3 class="nombre-producto-producto">SUERO ANTIOXIDANTE CON COLAGENO</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$6.844</h2>
-                                    <h3 class="cantidad-cuotas">3 cuotas de $2.281</h3>
-                                </div>
-
-                            </article>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="grids-producto">
-                    <div class="slide-content-producto">
-                        <div class="card-producto">
-                            <div class="image-content-producto">
-                                <div class="card-image-producto">
-                                    <img id="mascara-maybelline-waterproof" src="../img/pag-maqullaje/mascara-maybelline.png"
-                                        alt="Mascara de pestañas Total Temptation waterproof Maybelline">
-                                </div>
-                            </div>
-
-                            <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">MAYBELLINE</h2>
-                                <h3 class="nombre-producto-producto">TOTAL TEMPTATION MASCARA WATERPROOF</h3>
-                            </div>
-                            <hr class="separador">
-
-                            <article class="texto-descripcion">
-                                <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$4.780</h2>
+                                    <h2 class="precio-producto">$2.780</h2>
                                     <h3 class="cantidad-cuotas"></h3>
                                 </div>
 
