--- a/paginas/rostro.html
+++ b/paginas/rostro.html
@@ -96,8 +96,8 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Limpieza</a></li>
-                                <li><a class="dropdown-item" href="#">Hidratacion</a></li>
-                                <li><a class="dropdown-item" href="#">Anti-age</a></li>
+                                <li><a class="dropdown-item" href="#">Serum</a></li>
+                                <li><a class="dropdown-item" href="#">Brumas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
