--- a/paginas/limpieza.html
+++ b/paginas/limpieza.html
@@ -75,42 +75,40 @@
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle"
-                                href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/maquillaje.html"
                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Maquillaje
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item"
-                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/labios.html">Labios</a>
+                                        href="/paginas/labios.html">Labios</a>
                                 </li>
                                 <li><a class="dropdown-item"
-                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/ojos.html">Ojos</a>
+                                        href="/paginas/ojos.html">Ojos</a>
                                 </li>
                                 <li><a class="dropdown-item"
-                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/rostro.html">Rostro</a>
+                                        href="/paginas/rostro.html">Rostro</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle"
-                                href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/cuidado-facial.html"
                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Cuidado facial
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Limpieza</a></li>
-                                <li><a class="dropdown-item" href="#">Hidratacion</a></li>
-                                <li><a class="dropdown-item" href="#">Anti-age</a></li>
+                                <li><a class="dropdown-item" href="/paginas/limpieza.html">Limpieza</a></li>
+                                <li><a class="dropdown-item" href="/paginas/serum.html">Serum</a></li>
+                                <li><a class="dropdown-item" href="#">Brumas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Marcas</a>
+                            <a class="nav-link" href="/paginas/error.html">Marcas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Novedades</a>
+                            <a class="nav-link" href="/paginas/error.html">Novedades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="/paginas/error.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -480,10 +478,10 @@
                 <h1 id="links">Links</h1>
                 <hr>
                 <ul>
-                    <li>Nosotros</li>
-                    <li>Como comprar</li>
-                    <li>Terminos y condiciones</li>
-                    <li>Cancelar compra</li>
+                    <li><a href="/paginas/error.html"> Nosotros </a></li>
+                    <li><a href="/paginas/error.html">Como comprar </a></li>
+                    <li><a href="/paginas/error.html"> Terminos y condiciones</a></li>
+                    <li><a href="/paginas/error.html">Cancelar compra</a></li>
                 </ul>
             </div>
 
@@ -491,9 +489,9 @@
                 <h1 id="contacto">Contacto</h1>
                 <hr>
                 <ul>
-                    <li>Wpp</li>
-                    <li>mail</li>
-                    <li>ubicacion</li>
+                    <li><a href="/paginas/error.html">Whatsapp</a></li>
+                    <li><a href="/paginas/error.html">Mail</a></li>
+                    <li><a href="/paginas/error.html">Ubicacion</a></li>
                 </ul>
             </div>
         </article>
