adicion pagina -Brumas- y correcion links navegacion

--- a/paginas/ojos.html
+++ b/paginas/ojos.html
@@ -77,13 +77,13 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item"
-                                        href="/paginas/labios.html">Labios</a>
+                                        href="/paginas/labios.html" target="_blank">Labios</a>
                                 </li>
                                 <li><a class="dropdown-item"
-                                        href="/paginas/ojos.html">Ojos</a>
+                                        href="/paginas/ojos.html" target="_blank">Ojos</a>
                                 </li>
                                 <li><a class="dropdown-item"
-                                        href="/paginas/rostro.html">Rostro</a>
+                                        href="/paginas/rostro.html" target="_blank">Rostro</a>
                                 </li>
                             </ul>
                         </li>
@@ -93,9 +93,9 @@
                                 Cuidado facial
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/paginas/limpieza.html">Limpieza</a></li>
-                                <li><a class="dropdown-item" href="/paginas/serum.html">Serum</a></li>
-                                <li><a class="dropdown-item" href="#">Brumas</a></li>
+                                <li><a class="dropdown-item" href="/paginas/limpieza.html" target="_blank">Limpieza</a></li>
+                                <li><a class="dropdown-item" href="/paginas/serum.html" target="_blank">Serum</a></li>
+                                <li><a class="dropdown-item" href="/paginas/brumas.html" target="_blank">Brumas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
