--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
                     <div class="contenedor-icon">
 
                         <div class="cont-icon">
-                            <a href="paginas/error.html">
+                            <a href="paginas/error.html" target="_blank">
                             <img class="img-logos" src="img/logo-corazon.png" alt="icono de corazon">
                         </a>
                         </div>
 
                         <div class="cont-icon">
-                            <a href="paginas/error.html">
+                            <a href="paginas/error.html" target="_blank">
                             <img class="img-logos" src="img/logo-carrito.png" alt="icono de carro de compras">
                         </a>
                         </div>
 
                         <div class="cont-icon">
-                            <a href="paginas/error.html">
+                            <a href="paginas/error.html" target="_blank">
                             <img class="img-logos" src="img/logo-user (1).png" alt="icono de usuario">
                         </a>
                         </div>
@@ -85,19 +85,18 @@
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle"
-                                href="paginas/maquillaje.html"
                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Maquillaje
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item"
-                                        href="paginas/labios.html">Labios</a>
+                                        href="paginas/labios.html" target="_blank">Labios</a>
                                 </li>
                                 <li><a class="dropdown-item"
-                                        href="paginas/ojos.html">Ojos</a>
+                                        href="paginas/ojos.html" target="_blank">Ojos</a>
                                 </li>
                                 <li><a class="dropdown-item"
-                                        href="paginas/rostro.html">Rostro</a>
+                                        href="paginas/rostro.html" target="_blank">Rostro</a>
                                 </li>
                             </ul>
                         </li>
@@ -107,19 +106,19 @@
                                 Cuidado facial
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="paginas/limpieza.html">Limpieza</a></li>
-                                <li><a class="dropdown-item" href="paginas/error.html">Serum</a></li>
-                                <li><a class="dropdown-item" href="paginas/error.html">Brumas</a></li>
+                                <li><a class="dropdown-item" href="paginas/limpieza.html" target="_blank">Limpieza</a></li>
+                                <li><a class="dropdown-item" href="paginas/serum.html" target="_blank">Serum</a></li>
+                                <li><a class="dropdown-item" href="paginas/brumas.html" target="_blank">Brumas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="paginas/error.html">Marcas</a>
+                            <a class="nav-link" href="paginas/error.html" target="_blank">Marcas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="paginas/error.html">Novedades</a>
+                            <a class="nav-link" href="paginas/error.html" target="_blank">Novedades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="paginas/error.html">Contacto</a>
+                            <a class="nav-link" href="paginas/error.html" target="_blank">Contacto</a>
                         </li>
                     </ul>
                 </div>
