--- a/paginas/labios.html
+++ b/paginas/labios.html
@@ -78,11 +78,11 @@
                                 Maquillaje
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/paginas/labios.html">Labios</a>
+                                <li><a class="dropdown-item" href="/paginas/labios.html" target="_blank">Labios</a>
                                 </li>
-                                <li><a class="dropdown-item" href="/paginas/ojos.html">Ojos</a>
+                                <li><a class="dropdown-item" href="/paginas/ojos.html" target="_blank">Ojos</a>
                                 </li>
-                                <li><a class="dropdown-item" href="/paginas/rostro.html">Rostro</a>
+                                <li><a class="dropdown-item" href="/paginas/rostro.html" target="_blank">Rostro</a>
                                 </li>
                             </ul>
                         </li>
@@ -92,9 +92,9 @@
                                 Cuidado facial
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/paginas/limpieza.html">Limpieza</a></li>
-                                <li><a class="dropdown-item" href="/paginas/serum.html">Serum</a></li>
-                                <li><a class="dropdown-item" href="#">Brumas</a></li>
+                                <li><a class="dropdown-item" href="/paginas/limpieza.html" target="_blank">Limpieza</a></li>
+                                <li><a class="dropdown-item" href="/paginas/serum.html" target="_blank">Serum</a></li>
+                                <li><a class="dropdown-item" href="/paginas/brumas.html" target="_blank">Brumas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
